hphp/hack/test/typecheck/reactive/rx_if_arg_impl3.php.exp
File "rx_if_arg_impl3.php", line 11, characters 14-27:
Parameter is marked with <<__OnlyRxIfImpl>> attribute that have invalid arguments. This attribute must have one argument and it should be '::class' class constant. (NastCheck[3059])
