hphp/hack/test/typecheck/reactive/rx_if_arg_impl3.php
<?hh // strict

interface A {
}

interface RxA {
}

//ERROR
<<__Rx, __AtMostRxAsArgs>>
function f(<<__OnlyRxIfImpl("RxA")>>A $a): void {
}
